# SeetaFaceEngine

./: Linux Tools  README.md  autoCV.sh
FaceAlignment/src/: cfan.cpp  face_alignment.cpp
FaceIdentification/src/test/: CMakeLists.txt  face_verification_modified.cpp  test_face_recognizer.cpp.bak
